--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,6 +6,7 @@
 
     <!-- Global CSS -->
     <link rel="stylesheet" href="{{ "css/general.css" | relURL }}">
+    <link rel="icon" type="image/x-icon" href="{{ "favicon.ico" | relURL }}">
 
     <!-- Page-specific CSS handled by partial -->
     {{ partial "head/css.html" . }}
@@ -24,6 +25,17 @@
     </main>
 
     {{ partial "footer.html" . }}
+
+    <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      const hamburger = document.querySelector(".hamburger");
+      const menu = document.querySelector(".navbar .menu");
+
+      hamburger.addEventListener("click", function() {
+        menu.classList.toggle("active");
+      });
+    });
+    </script>
 
 </body>
 </html>
